force-app/main/default/objects/SFMC_Journeys_Auth__c/SFMC_Journeys_Auth__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Marketing Cloud Journeys Auth</label>
</CustomObject>