force-app/main/default/objects/SFMC_Journeys_Auth__c/fields/AuthUrl__c.field-meta.xml
<CustomField>
    <fullName>AuthUrl__c</fullName>
    <label>Auth URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>