force-app/main/default/objects/SFMC_Journeys_Auth__c/fields/Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Name__c</fullName>
    <label>Internal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>