force-app/main/default/objects/SFMC_Journeys_Auth__c/fields/Rest_Url__c.field-meta.xml
<CustomField>
    <fullName>Rest_Url__c</fullName>
    <label>Rest URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>